--- a/app/views/layinghens/current/scoring/ramps.html
+++ b/app/views/layinghens/current/scoring/ramps.html
@@ -40,8 +40,8 @@
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['scoring-ramps'] == 'No'
+                            value: 'No, every level will not be connected by a ramp',
+                            checked: true if data['scoring-ramps'] == 'No, every level will not be connected by a ramp'
                         }
                     ]
                 }) }}
