--- a/app/views/layinghens/current/scoring/grip.html
+++ b/app/views/layinghens/current/scoring/grip.html
@@ -20,7 +20,11 @@
                 {% set nextPage = 'veranda-requirements' %}
             {% endif %}
 
-            <form action="{{ nextPage }}">
+            {% if data['from-scoring'] == 'true' %}
+                <form action="results">
+            {% else %}
+                <form action="{{ nextPage }}">
+            {% endif %}
 
                 {{ govukRadios ({
                     idPrefix: 'scoring-grip',
@@ -39,8 +43,8 @@
                     items: [
                         {
                             text: 'Yes',
-                            value: 'Yes',
-                            checked: true if data['scoring-grip'] == 'Yes'
+                            value: 'Yes, there will be easy grip perches',
+                            checked: true if data['scoring-grip'] == 'Yes, there will be easy grip perches'
                         },
                         {
                             text: 'No',
