results page updates

--- a/app/views/layinghens/current/scoring/data.html
+++ b/app/views/layinghens/current/scoring/data.html
@@ -45,8 +45,8 @@
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['scoring-data'] == 'No',
+                            value: 'No, bird data will not be monitored',
+                            checked: true if data['scoring-data'] == 'No, bird data will not be monitored',
                             attributes: {
                                 'data-next': nextPageOnNo
                             }
