--- a/app/views/layinghens/current/scoring/energy.html
+++ b/app/views/layinghens/current/scoring/energy.html
@@ -61,8 +61,8 @@
                         },
                         {
                             text: 'None of the above',
-                            value: 'None of the above',
-                            checked: true if 'None of the above' | isIn(data['scoring-energy']),
+                            value: 'No renewable energy use',
+                            checked: true if 'No renewable energy use' | isIn(data['scoring-energy']),
                             attributes: {
                                 'data-behaviour': 'exclusive'
                             }
