--- a/app/views/layinghens/current/scoring/environment-data.html
+++ b/app/views/layinghens/current/scoring/environment-data.html
@@ -42,8 +42,8 @@
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['scoring-environment-data'] == 'No',
+                            value: 'No, environmental data will not be monitored',
+                            checked: true if data['scoring-environment-data'] == 'No, environemntal data will not be monitored',
                             attributes: {
                                 'data-next': 'results'
                             }
