--- a/app/views/layinghens/current/scoring/features.html
+++ b/app/views/layinghens/current/scoring/features.html
@@ -65,8 +65,8 @@
                         },
                         {
                             text: 'None of the above',
-                            value: 'None of the above',
-                            checked: true if 'None of the above' | isIn(data['scoring-features']),
+                            value: 'No additional pollution mitigation',
+                            checked: true if 'No additional pollution mitigation' | isIn(data['scoring-features']),
                             attributes: {
                                 'data-behaviour': 'exclusive'
                             }
