--- a/app/views/layinghens/current/scoring/height.html
+++ b/app/views/layinghens/current/scoring/height.html
@@ -41,7 +41,7 @@
                         {
                             text: 'No',
                             value: 'No, the highest tier is more than 2 metres high',
-                            checked: true if data['scoring-height'] == 'No'
+                            checked: true if data['scoring-height'] == 'No, the highest tier is more than 2 metres high'
                         }
                     ]
                 }) }}
