--- a/app/views/layinghens/current/scoring/natural-light.html
+++ b/app/views/layinghens/current/scoring/natural-light.html
@@ -43,8 +43,8 @@
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['scoring-natural-light'] == 'No'
+                            value: 'No, there will not be windows',
+                            checked: true if data['scoring-natural-light'] == 'No, there will not be windows'
                         }
                     ]
                 }) }}
