--- a/app/views/layinghens/current/scoring/structure.html
+++ b/app/views/layinghens/current/scoring/structure.html
@@ -54,8 +54,8 @@
                         },
                         {
                             text: 'None of the above',
-                            value: 'None of the above',
-                            checked: true if 'None of the above' | isIn(data['scoring-structure']),
+                            value: 'No additional biosecurity measures',
+                            checked: true if 'No additional pollution mitigation' | isIn(data['scoring-structure']),
                             attributes: {
                                 'data-behaviour': 'exclusive'
                             }
