--- a/app/views/layinghens/current/scoring/veranda-requirements.html
+++ b/app/views/layinghens/current/scoring/veranda-requirements.html
@@ -87,8 +87,8 @@
                         },
                         {
                             text: 'No',
-                            value: 'No',
-                            checked: true if data['scoring-veranda-requirements'] == 'No'
+                            value: 'No, the veranda will not meet the requirements',
+                            checked: true if data['scoring-veranda-requirements'] == 'No, the veranda will not meet the requirements'
                         }
                     ]
                 }) }}
