--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -204,13 +204,13 @@
                 </li>
 
                 <li>
-                    <a href="/layinghens/current/scoring/current-system?poultry-type=hen">
+                    <a href="/layinghens/current/scoring/current-system?poultry-type=hen&from-scoring=false">
                         Scoring (hens)
                     </a>
                 </li>
 
                 <li>
-                    <a href="/layinghens/current/scoring/current-system?poultry-type=pullet">
+                    <a href="/layinghens/current/scoring/current-system?poultry-type=pullet&from-scoring=false">
                         Scoring (pullets)
                     </a>
                 </li>
