--- a/app/views/layinghens/current/scoring/dark-brooders.html
+++ b/app/views/layinghens/current/scoring/dark-brooders.html
@@ -43,7 +43,7 @@
                         },
                         {
                             text: 'No',
-                            value: 'No',
+                            value: 'No, the housing will not have dark brooders',
                             checked: true if data['scoring-dark-brooders'] == 'No'
                         }
                     ]
