Updates to elimination titles

--- a/app/views/layinghens/current/eligibility/ventilation/elim-rate.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-rate.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme
+    You cannot apply for a grant from this scheme - Ventilation rate
 {% endblock %}
 
 {% block content %}
