--- a/app/views/layinghens/current/elim-project-type.html
+++ b/app/views/layinghens/current/elim-project-type.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme
+    You cannot apply for a grant from this scheme - Project type
 {% endblock %}
 
 {% block content %}
