--- a/app/views/layinghens/current/eligibility/solar/elim-project-cost.html
+++ b/app/views/layinghens/current/eligibility/solar/elim-project-cost.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme
+    You cannot apply for a grant from this scheme - Project cost
 {% endblock %}
 
 {% block content %}
@@ -29,7 +29,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The minimum grant you can apply for is £15,000 (40% of £37,500).
+                    The minimum grant you can apply for housing project costs is £15,000 (40% of £37,500).
                 </p>
 
                 {% if data['solar-pv-system'] == 'Yes' %}
