--- a/app/views/layinghens/current/eligibility/ventilation/elim-air-speed.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-air-speed.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme
+    You cannot apply for a grant from this scheme - Ventilation air speed
 {% endblock %}
 
 {% block content %}
