--- a/app/views/layinghens/current/scoring/energy.html
+++ b/app/views/layinghens/current/scoring/energy.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing use sustainable energy sources?
+    Will the {{ poultryType }} housing use renewable energy sources?
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing use sustainable energy sources?',
+                            text: 'Will the ' + poultryType + ' housing use renewable energy sources?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
